err/arc-library.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/arc_library-1.0.48.egg-info'...
Listing './lib/python3.5/site-packages/arclib'...
Listing './lib/python3.5/site-packages/arclib/django'...
Compiling './lib/python3.5/site-packages/arclib/django/decorators.py'...
***   File "./lib/python3.5/site-packages/arclib/django/decorators.py", line 33
    print 'exception_json except : %s, %s' % (func.__name__, str(e.__class__))
                                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/arclib/gae'...
Compiling './lib/python3.5/site-packages/arclib/gae/memcache.py'...
***   File "./lib/python3.5/site-packages/arclib/gae/memcache.py", line 17
    print '-- memcache.set start --'
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/arclib/http'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
